# Board-game-rental-system

./: .env  .env.example  Cargo.toml  README.md  database.db
entity/: Cargo.toml
entity/src/: board_game.rs  extension_request.rs  favourite.rs  lib.rs  prelude.rs  rental.rs  rental_history.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241225_172304_create_board_games_table.rs  m20241225_180742_create_users_table.rs  m20241225_182718_create_rentals_table.rs  m20241225_190739_create_rental_history_table.rs  m20241225_191215_create_extension_requests_table.rs  m20241226_145812_create_favourites_table.rs
src/: auth.rs  auth_manager.rs  db_manager.rs  main.rs
src/static/: register.html
static/: add_board_game.html  login.html  test.html
