[package]
name = "board-game-rental-system"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
argon2 = "0.5.3"
chrono = "0.4.39"
dotenv = "0.15.0"
entity = { path = "entity" }
jsonwebtoken = "9"
migration = { path = "migration" }
tokio = { version = "1.42", features = ["full"] }
futures = "0.3.31"
sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde_json = "1.0"
serde = { version = "1.0.216", features = ["derive"] }
