[package]
name = "board-game-rental-system"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4"
argon2 = "0.5.3"
chrono = "0.4.39"
dotenv = "0.15.0"
entity = { path = "entity" }
futures = "0.3.31"
jsonwebtoken = "9"
lettre = "0.11.11"
migration = { path = "migration" }
sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.216", features = ["derive"] }
uuid = { version = "1.11.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
