[package]
name = "migration"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["sqlx-sqlite", "runtime-tokio-native-tls"]
